test/SemanticAnalysis/Switch/CannotPatternSwitchOnNonCopyableReference.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

interface HasMethod {
	void doSomething();
}

class NonCopyable() { }

datatype Data = A(NonCopyable a) | B();

void doSwitch(const Data& data) {
	// CHECK: .loci:14:10: error: Can't implicitly cast value of type 'ref<ref<const(Data)>(const(Data)&)>(ref<const(Data)>(const(Data)&)&)' to type 'Data'.
	switch (data) {
		case A(unused NonCopyable a) {
			unused_result a;
		}
		case B() { }
	}
}

// CHECK: 1 error generated.
